--- a/package.json
+++ b/package.json
@@ -17,5 +17,17 @@
         "tailwindcss": "^3.2.1",
         "vite": "^6.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@vee-validate/zod": "^4.15.0",
+        "@vueuse/core": "^12.4.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-vue-next": "^0.471.0",
+        "radix-vue": "^1.9.12",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7",
+        "vee-validate": "^4.15.0",
+        "zod": "^3.24.1"
     }
 }
