fix icon and add crud generator from zzzul

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@iconify/vue": "^4.3.0",
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
@@ -19,11 +20,16 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@flasher/flasher": "file:vendor/php-flasher/flasher/Resources",
+        "@iconify/json": "^2.2.295",
+        "@lucide/lab": "^0.1.2",
         "@vee-validate/zod": "^4.15.0",
         "@vueuse/core": "^12.4.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "lucide-vue-next": "^0.471.0",
+        "datatables.net-dt": "^2.2.1",
+        "datatables.net-vue3": "^3.0.4",
+        "iconify-icon": "^2.3.0",
         "radix-vue": "^1.9.12",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
