--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "php-flasher/flasher-laravel": "^2.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
+        "evdigiina/generator": "^0.3.0",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.3",
         "laravel/pail": "^1.1",
