CRUD User complete + fix bug :fire:

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@vueuse/core": "^12.4.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "datatables.net-buttons-dt": "^3.2.0",
         "datatables.net-dt": "^2.2.1",
         "datatables.net-vue3": "^3.0.4",
         "iconify-icon": "^2.3.0",
