--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
         "@iconify/vue": "^4.3.0",
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/postcss": "^4.0.0",
         "@vitejs/plugin-vue": "^5.0.0",
-        "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^4.0.0",
         "vite": "^6.0",
         "vue": "^3.4.0"
     },
