--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
-        "laravel/framework": "^11.31",
+        "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "php-flasher/flasher-laravel": "^2.1",
-        "tightenco/ziggy": "^2.0"
+        "tightenco/ziggy": "^2.0",
+        "yajra/laravel-datatables-oracle": "^12.0"
     },
     "require-dev": {
-        "evdigiina/generator": "^0.3.0",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.3",
         "laravel/pail": "^1.1",
@@ -26,7 +26,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
-        "pestphp/pest": "^3.7",
+        "pestphp/pest": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.0"
     },
     "autoload": {
